--- a/src/app/(pages)/checkout/CheckoutForm/index.module.css
+++ b/src/app/(pages)/checkout/CheckoutForm/index.module.css
@@ -1,5 +1,5 @@
-@import "../../../_css/common";
-
+@forward './queries.scss';
+@forward './type.scss';
 .form {
   display: flex;
   flex-direction: column;
