--- a/src/app/(pages)/order-confirmation/OrderConfirmationPage/index.module.css
+++ b/src/app/(pages)/order-confirmation/OrderConfirmationPage/index.module.css
@@ -1,5 +1,5 @@
-@import '../../../_css/common';
-
+@forward './queries.scss';
+@forward './type.scss';
 .actions {
   display: flex;
   flex-wrap: wrap;
