--- a/src/app/_components/Header/Nav/index.module.css
+++ b/src/app/_components/Header/Nav/index.module.css
@@ -1,5 +1,4 @@
 @use '../../../_css/queries.scss' as *;
-
 .nav {
   display: flex;
   gap: calc(var(--base) / 4) var(--base);
@@ -8,10 +7,10 @@
   opacity: 1;
   transition: opacity 100ms linear;
   visibility: visible;
+}
 
-  > * {
-    text-decoration: none;
-  }
+.nav > * {
+  text-decoration: none;
 }
 
 .hide {
